--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = lamda restaurants[\"name\"]\n",
+    "names = list(map(lambda restaurant: dict(name=restaurant['name']\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
