--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,7 @@
     }
    ],
    "source": [
-    "names = list(map(lambda restaurant: dict(name=restaurant['name'])))\n",
+    "names = list(map(lambda restaurant: dict(name=restaurant['name']),yelp_restaurants))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
