--- a/index.ipynb
+++ b/index.ipynb
@@ -235,20 +235,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-10-87525b7ade7f>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-87525b7ade7f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    names = list(map(lambda restaurant: dict(name = restaurant[]),yelp_restaurants))\u001b[0m\n\u001b[0m                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'name': 'Fork & Fig'},\n",
+       " {'name': 'Salt And Board'},\n",
+       " {'name': 'Frontier Restaurant'},\n",
+       " {'name': 'Nexus Brewery'},\n",
+       " {'name': \"Devon's Pop Smoke\"},\n",
+       " {'name': 'Cocina Azul'},\n",
+       " {'name': 'Philly Steaks'},\n",
+       " {'name': 'Stripes Biscuit'}]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "names = list(map(lambda restaurant: dict(name = restaurant[),yelp_restaurants))\n",
+    "names = list(map(lambda restaurant: dict(name = restaurant['name']),yelp_restaurants))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
