--- a/index.ipynb
+++ b/index.ipynb
@@ -235,20 +235,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-15-31cf59a9b2a6>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-16-0e19d3a42e33>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-31cf59a9b2a6>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    names = list(map(lambda 'name': restaurant[\"name\"],yelp_restaurants))\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-0e19d3a42e33>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    names = list(map(lambda restaurant['name]': restaurant[\"name\"],yelp_restaurants))\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "names = list(map(lambda resta: restaurant[\"name\"],yelp_restaurants))\n",
+    "names = list(map(lambda restaurant['name]': restaurant[\"name\"],yelp_restaurants))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
