--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "review_counts = resta\n",
+    "review_counts = restaurant[\"review_count\"]\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
   },
