--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "review_counts = lamda maprestaurant[\"review_count\"], restaurant\n",
+    "review_counts = map(lamrestaurant[\"review_count\"], restaurant\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
   },
