Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -269,9 +269,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-18-7b4444c02283>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-7b4444c02283>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    review_counts = map(lamda restaurants[\"review_count\"], restaurants\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "review_counts = map(lamda restaurants[\"review_count\"], restaurants\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
