--- a/index.ipynb
+++ b/index.ipynb
@@ -282,7 +282,7 @@
     }
    ],
    "source": [
-    "review_counts = list(map(lamda review_count:restaurants)))\n",
+    "review_counts = list(map(lamda restaurant[\"review_count:restaurants)))\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
   },
