Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -282,7 +282,7 @@
     }
    ],
    "source": [
-    "review_counts = list(map(lambda review_count,Let's say we want to get a sense of total number of reviews in the whole dataset. We can add up the elements in `review_counts` list, and assign the result to a variable named `total_reviews`.))\n",
+    "review_counts = list(map(lambda review_count,, and assign the result to a variable named `total_reviews`.))\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20"
    ]
   },
