--- a/index.ipynb
+++ b/index.ipynb
@@ -282,7 +282,7 @@
     }
    ],
    "source": [
-    "review_counts = list(map(lambda review_count: dict(review_count=restaurant['name'],\n",
+    "review_counts = list(map(lambda review_count: dict(review_count=restaurant['review_count'],\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20"
    ]
   },
