--- a/index.ipynb
+++ b/index.ipynb
@@ -269,20 +269,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-30-a83b137d593b>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-31-5bbda0bf7060>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-a83b137d593b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    review_counts = list(map(lambda review_count,yelp_restaurants))\u001b[0m\n\u001b[0m                                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-5bbda0bf7060>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    review_counts # [610, 11, 1373, 680, 54, 647, 25, 20\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "review_counts = list(map(lambda review_count: dict(review_count=restaurant['review_count'], restaurant\n",
+    "review_counts = list(map(lambda review_count: dict(review_count=restaurant['review_count'], restaurants)\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20"
    ]
   },
